Removed Overflow Scrollbar and fixed font sizes.

--- a/src/pages/create-project/create-project.styl
+++ b/src/pages/create-project/create-project.styl
@@ -1,7 +1,8 @@
 @import "~variables"
 
 div.q-layout-page.u-page.u-page-index, main.q-layout-page.u-page.u-page-index {
-  padding: 12px 24px
+  padding 12px 24px
+
 }
 
 .q-headline {
@@ -55,10 +56,9 @@ div.q-layout-page.u-page.u-page-index, main.q-layout-page.u-page.u-page-index {
 
   .q-if-label {
     font-family Lato
-    font-size 18px
+    font-size 16px
     font-weight bold
     line-height 1.5
-    color #000000
     margin -20px
   }
 }
@@ -88,4 +88,8 @@ div.q-layout-page.u-page.u-page-index, main.q-layout-page.u-page.u-page-index {
     font-family  NotoSans
     font-size 12px
     height 20px
+}
+
+.u-page .u-page {
+  overflow visible !important
 }
